--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pars.css</title>
+    <title>PARS.css | CSS Component Library</title>
+    <meta name="theme-color" content="#3e6eff" />
+    <meta name="title" content="PARS.css - CSS Component Library." />
+    <meta
+      name="description"
+      content="PARS is a CSS Component library that makes styling easy."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pars.netlify.app/" />
+
+    <meta property="og:title" content="PARS.css - CSS Components Library." />
+    <meta
+      property="og:description"
+      content="PARS is a CSS Component library that makes styling easy."
+    />
+    <meta property="og:image" content="https://imgur.com/VGCJgtP" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://pars.netlify.app/" />
+    <meta
+      property="twitter:title"
+      content="PARS.css - CSS Components Librayr."
+    />
+    <meta
+      property="twitter:description"
+      content="PARS is a CSS Component library that makes styling easy."
+    />
+    <meta property="twitter:image" content="https://imgur.com/VGCJgtP" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#3e6eff" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
   </head>
