fix: fixed meta title

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pars.netlify.app/" />
 
-    <meta property="og:title" content="PARS.css - CSS Components Library." />
+    <meta property="og:title" content="PARS.css - CSS Component Library." />
     <meta
       property="og:description"
       content="PARS is a CSS Component library that makes styling easy."
@@ -23,7 +23,7 @@
     <meta property="twitter:url" content="https://pars.netlify.app/" />
     <meta
       property="twitter:title"
-      content="PARS.css - CSS Components Librayr."
+      content="PARS.css - CSS Component Library."
     />
     <meta
       property="twitter:description"
